# tennis_pred

./: .env.example  .gitignore  ReadMe.md  pyproject.toml
config/: settings.toml
src/tennis_pred/: config.py
src/tennis_results_dashboard/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
